# observability

./: .gitignore  .my-shell.nix  Cargo.toml  README.md
examples/: channel_wrap.rs  channels.rs  metrics.rs  socket_client.rs  socket_server.rs
src/: deadlock.rs  fmt.rs  latency.rs  lib.rs  metrics.rs  open.rs
src/open/: channel.rs  context_wrap.rs  off.rs
tests/: deadlock.rs  dynamic.rs  open_telemetry.rs
