[package]
name = "observability"
version = "0.1.3"
authors = ["freesig <tom.gowan@holo.host>"]
edition = "2018"
description = "Experimental tracing ideas"
readme = "README.md"
license-file = "LICENSE"

[features]
default = ["opentelemetry-on"]
# Allows across thread and process tracing
opentelemetry-on = ["opentelemetry", "tracing-opentelemetry", "holochain_serialized_bytes", "serde", "serde_bytes"]
channels = ["tokio", "shrinkwraprs"]

[dependencies]
chrono = "0.4.6"
derive_more = "0.99.3"
inferno = "0.10.0"
serde_json = { version = "1.0.51", features = [ "preserve_order" ] }
thiserror = "1.0.22"
tracing = "0.1.21"
tracing-core = "0.1.17"
tracing-serde = "0.1.2"
tracing-subscriber = "0.2.15"

opentelemetry = { version = "0.8", default-features = false, features = ["trace", "serialize"], optional = true }
tracing-opentelemetry = { version = "0.8.0", optional = true }
holochain_serialized_bytes = {version = "0.0", optional = true }
serde = { version = "1", optional = true }
serde_bytes = { version = "0.11", optional = true }
tokio = { version = "0.2", features = [ "sync" ], optional = true }
shrinkwraprs = { version = "0.3.0", optional = true }
once_cell = "1.5"

# TODO make optional
tracing-timing = "0.4.3"

[dev-dependencies]
tokio = { version = "0.2.11", features = [ "full" ] }
tracing-futures = "0.2.4"
